Stop vex removing scrollbar

--- a/static/style.css
+++ b/static/style.css
@@ -369,3 +369,6 @@ form p {
   background-repeat: no-repeat;
   background-size: 50%;
 }
+body.vex-open {
+  overflow: inherit !important;
+}
